We must make sure that the process is terminated. mongod 2.4 does not work well with killproc.

--- a/templates/default/redhat-mongodb.init.erb
+++ b/templates/default/redhat-mongodb.init.erb
@@ -56,7 +56,7 @@ start()
 stop()
 {
   echo -n $"Stopping <%= @provides %>: "
-  killproc -p "$PIDFILE" -d 300 $DAEMON
+  kill -9 `pidof $DAEMON`
   RETVAL=$?
   echo
   [ $RETVAL -eq 0 ] && rm -f $SUBSYS_LOCK_FILE
